[package]
name = "qrlogo-wasm"
version = "0.1.0"
authors = ["Henrik <henrik@kaarposoft.dk>"]

[lib]
# cdylib is for the generated Web Assembly (WASM) code
# rlib if for our native examples
crate-type = ["cdylib", "rlib"]

[dependencies]
#
# *** ***
# *** *** MAKE SURE wasm-bindgen AND js-sys VERSIONS ARE COMPATIBLE !!!
# *** ***
# *** *** MAKE SURE wasm-bindgen MATCHES cfg/upstream.sh !!!
# *** ***
#
wasm-bindgen = "=0.2.21"
js-sys = "=0.2.6"

[dev-dependencies]
image = "0.20.0"
clap = "2.32.0"

# The release profile, used for `cargo build --release`.
[profile.release]
debug = true #DEFAULT: false
lto = true #DEFAULT: false
codegen-units = 1 #DEFAULT: 16
overflow-checks = true #DEFAULT: false

# The benchmarking profile, used for `cargo bench` and `cargo test --release`.
[profile.bench]
debug = true #DEFAULT: false
lto = true #DEFAULT: false
codegen-units = 1 #DEFAULT: 16
overflow-checks = true #DEFAULT: false
